Fix item wrapping after GWT has modified the DOM (checkbox gets wrapped in a span)

--- a/errai-jpa/demos/errai-jpa-demo-todo-list/src/main/java/org/jboss/errai/demo/todo/client/local/css/TodoList.css
+++ b/errai-jpa/demos/errai-jpa-demo-todo-list/src/main/java/org/jboss/errai/demo/todo/client/local/css/TodoList.css
@@ -38,7 +38,7 @@ div.item {
 	margin-bottom: 7px;
 }
 
-div.item input {
+div.item input, div.item span.gwt-CheckBox {
 	width: 20px;
 	height: 32px;
 	margin-left: 10px;
